--- a/site.html
+++ b/site.html
@@ -60,7 +60,7 @@
 
     <div class="image-wrapper overlay-fade-in">
 
-      <img src="https://overwatch-a.akamaihd.net/img/logos/overwatch-share-3d5a268515283007bdf3452e877adac466d579f4b44abbd05aa0a98aba582eeaebc4541f1154e57ec5a43693345bebda953381a7b75b58adbd29d3f3eb439ad2.jpg" />
+      <img src="https://overwatch-a.akamaihd.net/img/logos/overwatch-share-3d5a268515283007bdf3452e877adac466d579f4b44abbd05aa0a98aba582eeaebc4541f1154e57ec5a43693345bebda953381a7b75b58adbd29d3f3eb439ad2.jpg" /> <!-- Overwatch -->
 
       <div class="image-overlay-content">
         <h2>The World Needs More Heroes</h2>
