--- a/site.html
+++ b/site.html
@@ -21,8 +21,8 @@
   <ul class="inline-list">
     <li><a href="#">Home</a></li>
     <li class="active"><a href="#">Blog</a></li>
-    <li><a href="#">Pricing</a></li>
-    <li><a href="#">About</a></li>
+    <li><a href="#">Game Info</a></li>
+    <li><a href="#">About Us</a></li>
     <li><a href="#">FAQ</a></li>
     <li><a href="#">Contact</a></li>
   </ul>
